[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/Menus/logo.png" type="Texture" id=1]
[ext_resource path="res://dpcomic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Spells/Entities/FireOrb.png" type="Texture" id=4]
[ext_resource path="res://HUD/AchievementListElement.tscn" type="PackedScene" id=5]
[ext_resource path="res://Themes/VersionTheme.tres" type="Theme" id=6]
[ext_resource path="res://Sprites/Menus/MenuBGSymbol.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menus/MenuBGLight.png" type="Texture" id=8]
[ext_resource path="res://Themes/SeedTheme.tres" type="Theme" id=9]
[ext_resource path="res://Themes/Theme.tres" type="Theme" id=10]

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

uniform float var = 1.0;

void fragment() {
	COLOR = textureLod(TEXTURE, UV, 1.0)*var;
}"

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )
shader_param/var = 1.0

[sub_resource type="CanvasItemMaterial" id=17]
blend_mode = 1

[sub_resource type="OpenSimplexNoise" id=18]

[sub_resource type="NoiseTexture" id=19]
width = 400
height = 225
noise = SubResource( 18 )

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, 2.0);
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )

[sub_resource type="Animation" id=1]
resource_name = "Fadein"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Thing:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Thing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath("Thing:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "License"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Image:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Thing:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Thing:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Environment" id=12]
background_mode = 4
tonemap_mode = 3
auto_exposure_min_luma = 0.35
auto_exposure_max_luma = 7.09
auto_exposure_speed = 64.0
glow_blend_mode = 1

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Symbol" type="TextureRect" parent="."]
material = SubResource( 14 )
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SymbolGlow" type="TextureRect" parent="Symbol"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.5
margin_top = -130.0
margin_right = 117.5
margin_bottom = 130.0
texture = ExtResource( 8 )

[node name="Smoke" type="TextureRect" parent="Symbol"]
modulate = Color( 1, 0.870588, 0.803922, 0.145098 )
material = SubResource( 17 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="TextureRect" parent="Symbol"]
material = SubResource( 11 )
margin_right = 400.0
margin_bottom = 225.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 6 )
text = "0.13.1"

[node name="Animations" type="AnimationPlayer" parent="."]
anims/Fadein = SubResource( 1 )
anims/Fadeout = SubResource( 2 )
anims/License = SubResource( 3 )

[node name="MainMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -62.5
margin_right = 62.5
margin_bottom = 125.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MainMenu"]
anchor_left = 0.32
anchor_top = 0.867
anchor_right = 0.682
anchor_bottom = 0.964
margin_left = -20.0
margin_top = -0.0749964
margin_right = 20.2
margin_bottom = 0.100003
focus_mode = 1
theme = ExtResource( 9 )
align = 1
placeholder_text = "Leave empty for random seed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 105.0
margin_bottom = -38.0
grow_horizontal = 2
custom_constants/separation = -6

[node name="NewRunButton" type="Button" parent="MainMenuContainer"]
margin_right = 92.0
margin_bottom = 22.0
theme = ExtResource( 10 )
text = "New Run"
flat = true

[node name="AchievementsButton" type="Button" parent="MainMenuContainer"]
margin_top = 16.0
margin_right = 92.0
margin_bottom = 38.0
theme = ExtResource( 10 )
text = "Achievements"
flat = true

[node name="SettingsButton" type="Button" parent="MainMenuContainer"]
margin_top = 32.0
margin_right = 92.0
margin_bottom = 54.0
theme = ExtResource( 10 )
text = "Settings"
flat = true

[node name="QuitButton" type="Button" parent="MainMenuContainer"]
margin_top = 48.0
margin_right = 92.0
margin_bottom = 70.0
theme = ExtResource( 10 )
text = "Quit"
flat = true

[node name="SettingsMenuContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 118.0
margin_top = 64.0
margin_right = -118.0
margin_bottom = -63.0
grow_horizontal = 2
custom_constants/separation = -6

[node name="MouseSensitivityContainer" type="VBoxContainer" parent="SettingsMenuContainer"]
margin_right = 164.0
margin_bottom = 30.0
custom_constants/separation = -2

[node name="Label" type="Label" parent="SettingsMenuContainer/MouseSensitivityContainer"]
margin_right = 164.0
margin_bottom = 16.0
theme = ExtResource( 10 )
text = "Mouse Sensitivity"
align = 1

[node name="Slider" type="HSlider" parent="SettingsMenuContainer/MouseSensitivityContainer"]
margin_top = 14.0
margin_right = 164.0
margin_bottom = 30.0
theme = ExtResource( 10 )

[node name="DamageColorsCheckbox" type="CheckBox" parent="SettingsMenuContainer"]
margin_left = 23.0
margin_top = 24.0
margin_right = 141.0
margin_bottom = 48.0
size_flags_horizontal = 4
theme = ExtResource( 10 )
text = "Damage Colors"
align = 2
icon_align = 2

[node name="AccessibleFontCheckbox" type="CheckBox" parent="SettingsMenuContainer"]
margin_left = 23.0
margin_top = 42.0
margin_right = 140.0
margin_bottom = 66.0
size_flags_horizontal = 4
theme = ExtResource( 10 )
text = "Accessible Font"
align = 2

[node name="ControlsButton" type="Button" parent="SettingsMenuContainer"]
margin_top = 60.0
margin_right = 164.0
margin_bottom = 82.0
theme = ExtResource( 10 )
text = "Controls"
flat = true

[node name="MainMenuButton" type="Button" parent="SettingsMenuContainer"]
margin_top = 76.0
margin_right = 164.0
margin_bottom = 98.0
theme = ExtResource( 10 )
text = "Main Menu"
flat = true

[node name="ControlSettings" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 34

[node name="MainMenuButton" type="Button" parent="ControlSettings"]
margin_right = 380.0
margin_bottom = 22.0
theme = ExtResource( 10 )
text = "Main Menu"
flat = true

[node name="Achievements" type="ScrollContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 15.0
margin_right = -10.0
margin_bottom = -20.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="Container" type="VBoxContainer" parent="Achievements"]
margin_bottom = 170.0
custom_constants/separation = 34

[node name="Achievement2" parent="Achievements/Container" instance=ExtResource( 5 )]
margin_right = 0.0
achievement = "fun2"

[node name="Achievement3" parent="Achievements/Container" instance=ExtResource( 5 )]
margin_top = 34.0
margin_right = 0.0
margin_bottom = 34.0
achievement = "first_of_many"

[node name="Achievement" parent="Achievements/Container" instance=ExtResource( 5 )]
margin_top = 68.0
margin_right = 0.0
margin_bottom = 68.0
achievement = "fun1"

[node name="Achievement4" parent="Achievements/Container" instance=ExtResource( 5 )]
margin_top = 102.0
margin_right = 0.0
margin_bottom = 102.0
achievement = "oof_ouch"

[node name="Achievement6" parent="Achievements/Container" instance=ExtResource( 5 )]
margin_top = 136.0
margin_right = 0.0
margin_bottom = 136.0
achievement = "armageddont"

[node name="Achievement5" parent="Achievements/Container" instance=ExtResource( 5 )]
margin_top = 170.0
margin_right = 0.0
margin_bottom = 170.0
achievement = "test"

[node name="Ball" type="TextureRect" parent="."]
margin_left = 250.0
margin_top = 137.0
margin_right = 258.0
margin_bottom = 145.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thing" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Image" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadeWith" type="Label" parent="Image"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = 203.0
margin_right = 50.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 7 )
text = "Made With Godot"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sadblock" type="Label" parent="Image"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -18.5
margin_right = 212.0
margin_bottom = 18.5
custom_fonts/font = SubResource( 8 )
text = "SadBlockGames"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[connection signal="animation_finished" from="Animations" to="." method="_on_animation_finished"]
